--- a/match-sch-page-style.css
+++ b/match-sch-page-style.css
@@ -42,10 +42,27 @@
     padding-bottom: 30px;
 }
 
+.first-section h1 {
+    font-family: 'Source Serif Pro', serif;
+    font-size: 65px;
+    font-weight: bold;
+    color: white;
+    line-height: 70px;
+    padding-bottom: 30px;
+}
+
+.first-section h1:hover {
+    color: skyblue;
+}
+
 .first-section p {
     font-size: 16px;
     color: #ffffff;
     padding-bottom: 30px;
+}
+
+.first-section p:hover {
+    color: rgba(98, 252, 93, 0.623);
 }
 
 .first-sec-child-1 {
