--- a/style.css
+++ b/style.css
@@ -42,10 +42,18 @@
     padding-bottom: 30px;
 }
 
+.first-section h1:hover {
+    color: skyblue;
+}
+
 .first-section p {
     font-size: 16px;
     color: #ffffff;
     padding-bottom: 30px;
+}
+
+.first-section p:hover {
+    color: rgba(98, 252, 93, 0.623);
 }
 
 .first-sec-child-1 {
@@ -64,6 +72,7 @@
     background-color: aliceblue;
     color: #0d233a;
     font-weight: bold;
+    padding: 10px 40px;
     border: 1px solid orangered;
 }
 
